--- a/-2.html
+++ b/-2.html
@@ -331,25 +331,25 @@
                         <div class="col-sm-10 col-md-8 col-content">
                             <div class="clearfix margin-bottom-smaller">
                                 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-                                    <h2><small>Introduction:</small> Why read this guide?</h2>
-                                    <p><strong>Answer:</strong> You have 80,000 hours in your career. That&#8217;s a damn long time. Spend one or two of those hours on this guide, and work out how to use the rest.</p>
-                                    <p>You can receive the guide in <a href="/newsletter/">our newsletter</a>, in a summary series of <a href="https://www.youtube.com/watch?v=iY5Vd4LH1J4&#038;list=PL-BRtcBm4Yj6ZpOG49cbHut0gtuCEVXfk&#038;index=2">video lectures</a>, or as <a href="https://www.amazon.com/80-000-Hours-fulfilling-career-ebook/dp/B01M70QISP/">a book</a>. Or you can read it all online right here for free.</p>
-                                    <p><a href="/career-guide/introduction/" title="" class="btn btn-primary">Start now</a></p>
+                                    <h2><small>Введение:</small> Зачем читать это руководство?</h2>
+                                    <p><strong>Ответ:</strong> Вы посвятите работе около 80 000 часов. Это чертовски долго. Потратьте один или два из этих часов на это руководство и решите, как использовать остальные.</p>
+                                    <p>Вы можете получить руководство в виде <a href="/newsletter/">нашей рассылки</a>, в краткой серии <a href="https://www.youtube.com/watch?v=iY5Vd4LH1J4&#038;list=PL-BRtcBm4Yj6ZpOG49cbHut0gtuCEVXfk&#038;index=2">видео-лекций</a> или в качестве <a href="https://www.amazon.com/80-000-Hours-fulfilling-career-ebook/dp/B01M70QISP/">книги</a>. Или можно бесплатно прочитать всё это прямо тут.</p>
+                                    <p><a href="/career-guide/introduction/" title="" class="btn btn-primary">Начните сейчас</a></p>
                                 </div>
                                 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-                                    <h2><small>Part 1:</small> What makes for a dream job?</h2>
-                                    <p><strong>Answer:</strong> Research shows that to have a fulfilling career, you should do something you’re good at that makes the world a better place. Don’t aim for a highly paid, easy job, or expect to discover your &#8220;passion&#8221; in a flash of insight.</p>
-                                    <p>Find out the six key ingredients of fulfilling work:</p>
-                                    <p><a href="/career-guide/job-satisfaction/" title="" class="btn btn-default">Learn more</a></p>
+                                    <h2><small>Часть 1:</small> Из чего состоит «работа мечты»?</h2>
+                                    <p><strong>Ответ:</strong> Исследовани показывают, что для приносящей удовлетворения работы вы должны делать что-то, в чём вы хороши, что делает мир лучше. Не стремитесь к высооплачиваемой или лёгкой работе и не ожидайте, что обнаружите своё увлечение в мгновение ока.</p>
+                                    <p>Выясните шесть ключевых элементов приносящей удовольствие работы:</p>
+                                    <p><a href="/career-guide/job-satisfaction/" title="" class="btn btn-default">Узнать больше</a></p>
                                 </div>
                                 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-                                    <h2><small>Part 2:</small>How much difference can one person make?</h2>
-                                    <p><strong>Answer:</strong> Many common ways to do good, such as becoming a doctor, have less impact than you might first think. Other, more unconventional options, have allowed certain people to achieve an extraordinary impact (including one particular Lieutenant Colonel in the Soviet military).</p>
-                                    <p>Find out why your choice of career really matters for the world:</p>
-                                    <p><a href="/career-guide/how-much-difference-can-one-person-make/" title="" class="btn btn-default">Learn more</a></p>
+                                    <h2><small>Часть 2:</small>Насколько один человек может улучшить мир?</h2>
+                                    <p><strong>Ответ:</strong> Многие распространённые способы делать добро, вроде становления врачом, оказывают меньше положительного влияния, чем можно сперва подумать. Другие, менее привычные варианты, позволили некоторым людям добиться необычайного эффекта.</p>
+                                    <p>Выясните, поучему ваш выбор профессионального пути действительно имеет значение для мира:</p>
+                                    <p><a href="/career-guide/how-much-difference-can-one-person-make/" title="" class="btn btn-default">Узнать больше</a></p>
                                 </div>
                                 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-                                    <h2><small>Part 3:</small>Can you change the world without changing job?</h2>
+                                    <h2><small>Часть 3:</small>Можно ли изменить мир, не меняя работу?</h2>
                                     <p><strong>Answer:</strong> With the right approach, you can make a major difference to the lives of others without changing job, or making a major sacrifice. You can do this by giving 10% of your income to the world’s poorest people, promoting important causes, or assisting others in having an impact.</p>
                                     <p>Learn about three ways to make a difference in any job:</p>
                                     <p><a href="/career-guide/anyone-make-a-difference/" title="" class="btn btn-default">Learn more</a></p>
